Snake v1.0  功能基本正常运行，阻止反方向行走

--- a/Snake v0.1/css/game.css
+++ b/Snake v0.1/css/game.css
@@ -13,3 +13,4 @@ body{background:#ececec;}
 .btnBox .newGame{background: #33bc60;color:#fff;}
 .btnBox .pause{background: #ff6245;color:#fff;}
 .btnBox .start{background: #ffa445;color:#fff;}
+.btnBox .scoreBox{margin-top:20px;text-align:center;}
